<resources>
    <string name="app_name">SE2Einzelphase</string>
    <string name="Dividend">Dividend :</string>
    <string name="Divisor">Divisor :</string>
    <string name="Output">Output :</string>
    <string name="Ueberswchrift">Divisonsrechner</string>
    <string name="button">Dividieren</string>
    <string name="entwickler">Programmiert von Trattnig Sebastian</string>
    <string name="Fehler">Div / 0 Nicht möglich !</string>
    <string name="Fehler2">Falsche Eingabe!</string>
</resources>
