<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.sebit.se2einzelphase.MainActivity">

    <TextView
        android:layout_width="187dp"
        android:layout_height="30dp"
        android:text="@string/Ueberswchrift"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.109"
        app:layout_constraintHorizontal_bias="0.506"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        android:id="@+id/textView4" />

    <EditText
        android:id="@+id/zahl01"
        android:layout_width="0dp"
        android:layout_height="42dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/zahl02"
        android:layout_marginEnd="2dp"
        app:layout_constraintRight_toRightOf="@+id/zahl02"
        android:layout_marginTop="76dp"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="78dp"
        app:layout_constraintLeft_toLeftOf="@+id/zahl02" />

    <EditText
        android:id="@+id/zahl02"
        android:layout_width="190dp"
        android:layout_height="47dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="7dp"
        app:layout_constraintRight_toRightOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/zahl03"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:ems="10"
        android:inputType="numberDecimal|numberSigned"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/button"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="103dp"
        app:layout_constraintLeft_toLeftOf="@+id/zahl02" />

    <Button
        android:id="@+id/button"
        android:layout_width="295dp"
        android:layout_height="51dp"
        android:onClick="Berechnung"
        android:text="@string/button"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toTopOf="@+id/textView3"
        android:layout_marginStart="32dp"
        android:layout_marginTop="19dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="20dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Dividend"
        android:textAppearance="@android:style/TextAppearance"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/zahl01"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/zahl01" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:text="@string/Divisor"
        android:textAppearance="@android:style/TextAppearance"
        app:layout_constraintRight_toLeftOf="@+id/zahl02"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="9dp"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Output"
        android:textAppearance="@android:style/TextAppearance"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="@+id/zahl03"
        android:layout_marginEnd="1dp"
        app:layout_constraintRight_toRightOf="@+id/textView2"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="@+id/button"
        app:layout_constraintTop_toTopOf="@+id/zahl03" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="279dp"
        android:layout_height="22dp"
        android:layout_marginEnd="15dp"
        android:layout_marginRight="15dp"
        android:text="@string/entwickler"
        android:textAppearance="@style/TextAppearance.AppCompat.Notification.Info"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintRight_creator="1" />

</android.support.constraint.ConstraintLayout>
